Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.3, Qt Creator 4.1.0-beta1, Qt Creator 4.2.0-beta1
-
None
-
bac2d18405dfc37573df01a5e77798c8bd7da2b1
Description
The build directory is apparently not calculated from the project the kit is added to but rather from the project that's currently open in the editor.
Attachments
For Gerrit Dashboard: QTCREATORBUG-16724 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
167352,2 | ProjectExplorer: Resolve any CurrentProject:<foo> in default build path | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |