src/plugins/projectexplorer/projectmacroexpander.h
@@ -37,8 +37,8 @@ class Kit;
 class PROJECTEXPLORER_EXPORT ProjectMacroExpander : public Utils::MacroExpander
 {
 public:
-    ProjectMacroExpander(const QString &projectName, const Kit *kit, const QString &bcName,
-                         BuildConfiguration::BuildType buildType);
+    ProjectMacroExpander(const QString &mainFilePath, const QString &projectName, const Kit *kit,
+                         const QString &bcName, BuildConfiguration::BuildType buildType);
 };
 
 } // namespace ProjectExplorer
